# mecha-grpc-cli

./: Cargo.toml  Config.yaml  README.md  build.rs
proto/: network_manager.proto
src/: main.rs
src/configs/: base_config.rs
src/cpu/: cpu_cli.rs  cpu_interface.rs  mod.rs
src/display/: display_cli.rs  display_interface.rs  mod.rs
src/memory/: memory_cli.rs  memory_interface.rs  mod.rs
src/network/: mod.rs  network_cli.rs  network_interface.rs
src/storage/: mod.rs  storage_cli.rs  storage_interface.rs
