[package]
name = "mecha-grpc-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/mecha-grpc-cli"
homepage = "https://github.com/Dhruvesh08/mecha-grpc-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
log = "0.4.20"
serde_yaml = "0.9.25"
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = "0.3"


[build-dependencies]
tonic-build = "0.9.2"
